test/parse/expr/bad-getglobal-name-undefined.txt
;;; ERROR: 1
(module (func get_global $n))
(;; STDERR ;;;
out/test/parse/expr/bad-getglobal-name-undefined.txt:2:26: error: undefined global variable "$n"
(module (func get_global $n))
                         ^^
;;; STDERR ;;)
